# vxsig

./: .bazelrc  .clang-format  .gitignore  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: ci.yml
vxsig/: BUILD.bazel  binexport2.pb.h  binexport_reader.cc  binexport_reader.h  binexport_reader_test.cc  candidates.cc  candidates.h  candidates_test.cc  clamav_signature_formatter.cc  clamav_signature_formatter.h  clamav_signature_formatter_test.cc  common_subsequence.h  common_subsequence_test.cc  diff_result_reader.cc  diff_result_reader.h  diff_result_reader_test.cc  generic_signature.cc  generic_signature.h  generic_signature_test.cc  hamming.h  hamming_test.cc  longest_common_subsequence.cc  longest_common_subsequence.h  longest_common_subsequence_test.cc  match_chain_table.cc  match_chain_table.h  match_chain_table_test.cc  siggen.cc  siggen.h  siggen_main.cc  siggen_test.cc  signature_definition_hash.cc  signature_definition_hash.h  signature_definition_hash_test.cc  signature_formatter.cc  signature_formatter.h  signature_formatter_test.cc  signature_test_util.cc  signature_test_util.h  subsequence_regex.h  (+8 more)
vxsig/bazel/: BUILD.bazel  build_defs.bzl  vxsig_deps.bzl
vxsig/testdata/: 0000050d2efbd0602bed34669e2f2cb01f6e91e35014fafd35d80ada62d6169a-PID_2192_-Name_LoadDLL.exe_.BinExport  1794a0afbfc38411dec87fa2660d6dd6515cf8d03cb32bb24a1d7a8e1ecf30fa-dump.ProcessMemoryImage  1b0a84953909816c1945c2153605c2ddeb3b138fb4c262c7262cd9689ed25f82-dump.ProcessMemoryImage  1b0a84953909816c1945c2153605c2ddeb3b138fb4c262c7262cd9689ed25f82_vs_1d3949acb5eb175af3cbc5f448ece50669a44743faec91e3d574dad9596a9d83.BinDiff  1d3949acb5eb175af3cbc5f448ece50669a44743faec91e3d574dad9596a9d83-dump.ProcessMemoryImage  328b26dc3f0d8543e151495f4d6f3960323e3f51223522c2e4cd1e2fe9f9ed8f_vs_61971471cedcb4daed8d07ad79297568ffdaa17eb4ff301dc953cfafa91a4507.BinDiff  592fb377afa9f93670a23159aa585e0eca908b97571ab3218e026fea3598cc16_vs_65d25a86feb6d15527e398d7b5d043e7712b00e674bc6e8cf2a709a0c6f9b97b.BinDiff  61971471cedcb4daed8d07ad79297568ffdaa17eb4ff301dc953cfafa91a4507_vs_8433c9a6345d210d2196096461804d7137bbf2a6b71b20cc21f4ecf7d15ef6c2.BinDiff  livid1.db  sshd.korg.BinExport  sshd.korg_vs_sshd.trojan1.BinDiff  two_signatures.db
