module(
    name = "vxsig",
    version = "2.1",
)

bazel_dep(name = "rules_cc", version = "0.0.9")

# Need to use same version of Abseil LTS as protobuf
bazel_dep(name = "abseil-cpp", version = "20230802.0.bcr.1")
bazel_dep(name = "protobuf", version = "23.1")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "google_benchmark", version = "1.8.3")
bazel_dep(name = "sqlite3", version = "3.42.0.bcr.1")
