# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "vxsig",
    version = "2.1",
)

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "protobuf", version = "34.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "google_benchmark", version = "1.9.5")
bazel_dep(name = "sqlite3", version = "3.51.2.bcr.1")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_proto", version = "7.1.0")

# BinExport
http_archive(
    name = "com_google_binexport",
    build_file = "//vxsig:bazel/external/binexport/binexport.BUILD",
    patch_args = ["-p1"],
    patches = ["//vxsig:bazel/external/binexport/0001-third_party-prefix.patch"],
    sha256 = "146b26dafc79a5681a78038fa6d6ef31118dfaf4c3379c52a6cc8df9790c86dd",  # 2026-02-02
    strip_prefix = "binexport-644786690fcb6bcf6d42a76e7d8b65056176054d",
    urls = ["https://github.com/google/binexport/archive/644786690fcb6bcf6d42a76e7d8b65056176054d.zip"],
)

# Google OR tools
http_archive(
    name = "com_google_ortools",
    sha256 = "920d8266b30a7a8f8572a5dc663fdf8d2701792101dd95f09e72397c16e12858",  # 2026-01-09
    strip_prefix = "or-tools-9.15",
    urls = ["https://github.com/google/or-tools/archive/refs/tags/v9.15.zip"],
)
